@@ -1,6 +1,6 @@
-$Id: README,v 1.9 2005/12/09 15:27:47 garbled Exp $
+$Id: README,v 1.10 2006/02/01 17:40:14 garbled Exp $
 
-Welcome to clusterit-2.3 !
+Welcome to clusterit-2.4 !
 
 This is a collection of clustering tools, to turn your ordinary
 everyday pile of UNIX workstations into a speedy parallel beast.
